css/tailwind.css
/* ... */
@media (min-width: 997px) {
  .docItemCol_node_modules-\@docusaurus-theme-classic-lib-theme-DocItem-Layout-styles-module {
    max-width: 75% !important;
  }
}

/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

.mdxPageWrapper_node_modules-\@docusaurus-theme-classic-lib-theme-MDXPage-styles-module {
  justify-content: center;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 4px;
  width: 100%;
  height: 100%;
}

